classDiagram
    class ParkingLot {
        +int capacity
        +int evCapacity
        +int level
        +int numOfOccupiedSlots
        +int numOfOccupiedEvSlots
        +list slots
        +list evSlots
        -list event_observers
        +createParkingLot(capacity, evcapacity, level)
        +park(regnum, make, model, color, ev, motor, vehicle_type)
        +leave(slotid, ev)
        +status()
        +chargeStatus()
        +set_pricing_strategy(strategy)
        +add_event_observer(observer)
        +remove_event_observer(observer)
        +publish(event)
    }
    note for ParkingLot "Still owns slot search and query helper methods. They are omitted here to keep the high-level class view readable."
    
    class VehicleFactory {
        +create_vehicle(is_ev, is_motorcycle, regnum, make, model, color, vehicle_type)
    }
    
    class Vehicle {
        +string regnum
        +string make
        +string model
        +string color
        +string type
    }
    class Car
    class Truck
    class Motorcycle
    class Bus
    class ElectricVehicle {
        +int charge
        +setCharge(charge)
        +getCharge()
    }
    class ElectricCar
    class ElectricBike
    
    Vehicle <|-- Car
    Vehicle <|-- Truck
    Vehicle <|-- Motorcycle
    Vehicle <|-- Bus
    Vehicle <|-- ElectricVehicle
    ElectricVehicle <|-- ElectricCar
    ElectricVehicle <|-- ElectricBike
    
    ParkingLot ..> VehicleFactory : delegates to
    VehicleFactory ..> Car : instantiates
    VehicleFactory ..> Truck : instantiates
    VehicleFactory ..> Motorcycle : instantiates
    VehicleFactory ..> Bus : instantiates
    VehicleFactory ..> ElectricCar : instantiates
    VehicleFactory ..> ElectricBike : instantiates

    class PricingStrategy {
        <<interface>>
        +calculate_fee(vehicle)
    }
    class FlatRateStrategy
    class EVPremiumStrategy
    class VehicleTypeStrategy
    PricingStrategy <|-- FlatRateStrategy
    PricingStrategy <|-- EVPremiumStrategy
    PricingStrategy <|-- VehicleTypeStrategy

    ParkingLot o-- PricingStrategy : strategy

    class DomainEvent {
        <<base class>>
        +datetime timestamp
    }
    class LotInitializedEvent
    class VehicleParkedEvent
    class VehicleDepartedEvent
    class VehicleParkFailedEvent
    class VehicleDepartFailedEvent
    class PricingStrategyChangedEvent

    DomainEvent <|-- LotInitializedEvent
    DomainEvent <|-- VehicleParkedEvent
    DomainEvent <|-- VehicleDepartedEvent
    DomainEvent <|-- VehicleParkFailedEvent
    DomainEvent <|-- VehicleDepartFailedEvent
    DomainEvent <|-- PricingStrategyChangedEvent

    ParkingLot ..> DomainEvent : publishes
    
    ParkingLot "1" *-- "*" Vehicle : stores in slots and evSlots
    
    class AppGUI {
        -ParkingLot parkinglot
        -Tk root
        +create_widgets()
        +makeLot()
        +parkCar()
        +removeCar()
        +write_output(text)
        -_handle_event(event)
    }
    note for AppGUI "Also contains UI handlers for search, status, charge status, and randomized sample input."
    class TkinterWidgets {
        <<GUI state>>
        +StringVar inputs
        +IntVar flags
        +Text output
        +Text trace
    }
    AppGUI --> ParkingLot : uses
    AppGUI --> TkinterWidgets : owns
    ParkingLot ..> AppGUI : notifies event observer callback
